--- a/control.in
+++ b/control.in
@@ -1,6 +1,6 @@
-100 100 0.01 0.01
-200.0 2000 100 1
-"cavity_"
+400 100 0.01 0.01
+400.0 2000 100 1
+"channel_"
 
 !	read(10,*) ied,jed,dx,dt
 !	read(10,*) t_end,kstep_save,kstep_view,file_format
